xboxrt: Implement dirent functions

--- a/lib/xboxrt/Makefile
+++ b/lib/xboxrt/Makefile
@@ -1,4 +1,5 @@
 SRCS += \
+	$(NXDK_DIR)/lib/xboxrt/libc_extensions/dirent.c \
 	$(NXDK_DIR)/lib/xboxrt/libc_extensions/stat.c \
 	$(NXDK_DIR)/lib/xboxrt/libc_extensions/strings.c \
 	$(NXDK_DIR)/lib/xboxrt/libc_extensions/wchar.c \
