--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 	path = lib/libcxx
 	url = https://github.com/XboxDev/nxdk-libcxx.git
 	branch = nxdk
+[submodule "lib/zlib"]
+	path = lib/zlib
+	url = https://github.com/madler/zlib
