Debug output intercept demo

--- a/samples/hello/Makefile
+++ b/samples/hello/Makefile
@@ -1,5 +1,5 @@
 XBE_TITLE = hello
 GEN_XISO = $(XBE_TITLE).iso
-SRCS = $(CURDIR)/main.c
+SRCS = $(CURDIR)/main.c $(CURDIR)/int.s
 NXDK_DIR = $(CURDIR)/../..
 include $(NXDK_DIR)/Makefile
