--- a/lib/xboxrt/Makefile
+++ b/lib/xboxrt/Makefile
@@ -18,6 +18,7 @@ XBOXRT_SRCS := \
 	$(NXDK_DIR)/lib/xboxrt/c_runtime/_fltused.c \
 	$(NXDK_DIR)/lib/xboxrt/c_runtime/check_stack.c \
 	$(NXDK_DIR)/lib/xboxrt/c_runtime/chkstk.s \
+	$(NXDK_DIR)/lib/xboxrt/vcruntime/dynamic_cast.cpp \
 	$(NXDK_DIR)/lib/xboxrt/vcruntime/purecall.c \
 	$(NXDK_DIR)/lib/xboxrt/vcruntime/threadsafe_statics.c \
 	$(NXDK_DIR)/lib/xboxrt/vcruntime/vcruntime_exception.cpp \
