vcruntime: Implement SEH version 3

--- a/lib/xboxrt/Makefile
+++ b/lib/xboxrt/Makefile
@@ -22,7 +22,8 @@ XBOXRT_SRCS := \
 	$(NXDK_DIR)/lib/xboxrt/vcruntime/threadsafe_statics.c \
 	$(NXDK_DIR)/lib/xboxrt/vcruntime/vcruntime_exception.cpp \
 	$(NXDK_DIR)/lib/xboxrt/vcruntime/vcruntime_typeinfo.cpp \
-	$(NXDK_DIR)/lib/xboxrt/vcruntime/eh.cpp
+	$(NXDK_DIR)/lib/xboxrt/vcruntime/eh.cpp \
+	$(NXDK_DIR)/lib/xboxrt/vcruntime/excpt.cpp
 
 XBOXRT_OBJS = $(addsuffix .obj, $(basename $(XBOXRT_SRCS)))
 
