--- a/samples/excpt_tests/Makefile
+++ b/samples/excpt_tests/Makefile
@@ -1,6 +1,6 @@
 XBE_TITLE = nxdk\ exception\ tests
 GEN_XISO = $(XBE_TITLE).iso
-SRCS = $(wildcard $(CURDIR)/*.cpp)
+SRCS = main.cpp $(wildcard $(CURDIR)/t_*.cpp)
 NXDK_DIR ?= $(CURDIR)/../..
 NXDK_CXX = y
 include $(NXDK_DIR)/Makefile
