winsock: Implement error handling functions

--- a/lib/winapi/ws2_32/Makefile
+++ b/lib/winapi/ws2_32/Makefile
@@ -1,7 +1,8 @@
 NXDK_NET=y
 
 WS2_32_SRCS := \
-	$(NXDK_DIR)/lib/winapi/ws2_32/endianess.c
+	$(NXDK_DIR)/lib/winapi/ws2_32/endianess.c \
+	$(NXDK_DIR)/lib/winapi/ws2_32/error.c
 
 WS2_32_OBJS = $(addsuffix .obj, $(basename $(WS2_32_SRCS)))
 
